depoloyments_apr23_2023/resume/resume-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-nginx
spec:
  selector:
    app: resume-nginx
  ports:
    - protocol: TCP
      port: 5025
      targetPort: 80
  type: LoadBalancer
