depoloyments_apr23_2023/resume/resume-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-svc
spec:
  type: ClusterIP
  selector:
    app: resume-nginx
  ports:
  - name: http
    port: 5025
    targetPort: 80
