depoloyments_apr23_2023/resume/resume-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ing
spec:
  rules:
    - host: resume.maximus-powers.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: resume-nginx
              port:
                number: 5025
